function to display list of items and show vote on each item

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Bus Mall</title>
+  <title>BusMall</title>
   <link href="reset.css"rel="reset.css">
   <link href="style.css"rel="stylesheet">
 
@@ -12,29 +12,31 @@
 <body>
   <header>
     <img src="img/bus-logo.jpg" alt="bus logo" id="logo"/>
-    <h1>Bus Mall</h1>
+    <h1>BusMall</h1>
   </header>
   <main>
-    <div>
-      <ul>
-        <li></li>
-      </ul>
-
-
-    </div>
     <div id="image-holder">
       <img src="" alt="" id="left"/>
       <img src="" alt="" id="middle"/>
       <img src="" alt ="" id="right"/>
     </div>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto enim nihil quibusdam perferendis omnis, dolores distinctio maiores magnam doloribus officiis. Dolor quasi numquam at iste eligendi fugiat laborum, esse similique.
 
-    </p>
+    <div id="result">
+      <h2>Item Results</h2>
+      <ul>
+        
+      </ul>
+
+
+    </div>
+    
 
   </main>
   <footer>
- 
+    <canvas> </canvas>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
   <script src="app.js"></script>
 </body>
-</html>
+</html> 
