store product array in local storage

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 <body>
   <header>
-    <img src="img/bus-logo.jpg" alt="bus logo" id="logo"/>
+  <div>
     <h1>BusMall</h1>
+  </div>
+    
   </header>
   <main>
+    <div>
+      <img src="img/bus-logo.jpg" alt="bus logo" id="logo"/>
+    </div>
     <div id="image-holder">
       <img src="" alt="" id="left"/>
       <img src="" alt="" id="middle"/>
